--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>AHS Emoji Kaldırma</title>
-  <link rel="stylesheet" href="styles.css"> <!-- CSS dosyası -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/styles.css"> <!-- CSS dosyası -->
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="container">
@@ -18,9 +18,9 @@
   </div>
 
   <a href="https://github.com/alihaktan35" target="_blank" class="github-link">
-    <img src="github_logo.png" alt="GitHub" width="1150" height="465">
+    <img src="img/github_logo.png" alt="GitHub" width="1150" height="465">
   </a>
 
-  <script src="script.js"></script> <!-- JavaScript dosyası -->
+  <script src="js/script.js"></script> <!-- JavaScript dosyası -->
 </body>
 </html>
