Fixed all the issues.
Final version...

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
   <title>AHS Emoji Kaldırma</title>
-  <link rel="stylesheet" href="css/styles.css"> <!-- CSS dosyası -->
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="container">
     <h1>AHS Emoji Kaldırma</h1>
+    <p class="description">Bu site, emojili (sansürlü) olarak girilen linklerin temizlenmesini sağlar.</p>
     <input type="text" id="inputText" placeholder="Metni buraya girin...">
     <button onclick="removeEmojis()">Kaldır</button>
     <p id="outputLink" class="output"></p>
@@ -21,6 +21,6 @@
     <img src="img/github_logo.png" alt="GitHub" width="1150" height="465">
   </a>
 
-  <script src="js/script.js"></script> <!-- JavaScript dosyası -->
+  <script src="js/script.js"></script>
 </body>
 </html>
